--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>My first Interactive Map</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../Interactive_PR/bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../Interactive_PR/starter-template.css" rel="stylesheet">
+    <link href="../starter-template.css" rel="stylesheet">
       
     <!-- Font -->
       <link href="mikrojihad-font_bukhari-script/Bukhari%20Script.ttf" rel='stylesheet' type='text/css'>
