--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="../bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../starter-template.css" rel="stylesheet">
+    <link href="starter-template.css" rel="stylesheet">
       
     <!-- Font -->
       <link href="mikrojihad-font_bukhari-script/Bukhari%20Script.ttf" rel='stylesheet' type='text/css'>
