--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>My first Interactive Map</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
