--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Luis Torres">
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>My first Interactive Map</title>
@@ -83,6 +83,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="popper.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="bootstrap-4/js/bootstrap.min.js"></script>
   </body>
 </html>
