--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Luis Torres">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>My first Interactive Map</title>
+    <title>My First Interactive Map</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
